[package]
name = "rrt"
version = "0.7.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]
edition = "2021"
description = "Path finding using dual-RRT connect"
license = "Apache-2.0"
keywords = ["search", "path-finding", "rrt", "robotics"]
categories = ["algorithms"]
repository = "https://github.com/openrr/rrt"

# Note: num-traits is public dependency.
[dependencies]
kdtree = "0.7"
num-traits = "0.2"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
kiss3d = "0.35"
