[package]
name = "rrt"
# When publishing a new version:
# - Create "v0.x.y" git tag
# - Push the above tag (run `git push origin --tags`)
# Then, CI will publish to crates.io and create a GitHub release.
version = "0.7.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]
edition = "2021"
description = "Path finding using dual-RRT connect"
license = "Apache-2.0"
keywords = ["search", "path-finding", "rrt", "robotics"]
categories = ["algorithms"]
repository = "https://github.com/openrr/rrt"

# Note: num-traits is public dependency.
[dependencies]
kdtree = "0.7"
num-traits = "0.2"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
kiss3d = "0.35"

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
# missing_docs = "warn" # TODO: This somehow warns examples.
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
[workspace.lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12920
